# VersperOmni

./: .gitignore  README.md  main.py  model.py  pyproject.toml
docs/: README.md
docs/architecture/: 01-overview.md  02-thinker-talker.md  04-design-choices.md
docs/archive/: MiniMind-O Technical Report: An Open Small-Scale Speech-Native Omni Model.md  Wan-Streamer v0.1: End-to-end Real-time Interactive Foundation Models.md
docs/code/: 01-config.md  02-lm.md  03-vlm.md  04-omni.md  05-datasets.md  06-training-scripts.md
docs/dataset/: 01-pretrain.md  02-sft.md  03-rl.md
docs/guides/: 00-setup.md  01-inference.md  02-demo.md  03-evaluation.md  04-advanced.md  05-tensorboard.md  05-tui.md
docs/omni/: 01-overview.md  03-data-format.md  04-training.md  05-design-choices.md  06-performance.md  07-interview-qa.md  README.md
docs/reference/: 02-interview-qa.md
docs/training/: 01-pretrain.md  02-sft.md  03-rl.md  04-omni-strategy.md
src/: __init__.py  config.py
src/dataset/: __init__.py  lm_dataset.py  omni_dataset.py  vlm_dataset.py
src/evaluator/: config.py  metrics.py  ppl_eval.py
src/model/module/: attention.py
src/models/: llm.py  omni.py  vlm.py
src/modules/: __init__.py  attention.py  block.py  feed_forward.py
src/scripts/: web_demo.py
src/trainer/: pretrain.py  sft_omni.py  sft_vlm.py  utils.py
src/versper/: __init__.py  config.py  model.py  omni.py  vlm.py
src/versper/dataset/: __init__.py  vlm_dataset.py
src/versper/modules/: __init__.py  norm.py  rope.py
src/versper/scripts/: web_demo.py
src/versper/trainer/: pretrain.py  (+2 more)
(+4 files in other folders)
