[project]
name = "versperomni"
version = "0.2.0"
description = "VersperOmni — Open Small-Scale Speech-Native Omni Model (MiniMind-O integration)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "torch>=2.12.0",
    "transformers>=4.50.0",
    "datasets>=2.14.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "scipy>=1.12.0",
    "Pillow>=10.0.0",
    "pyarrow>=14.0.0",
    "sentencepiece>=0.2.0",
    "textual>=8.0.0",
]

[project.scripts]
versper-tui = "versper.tui.app:main"

[project.optional-dependencies]
vlm = []
omni = [
    "funasr>=1.0.0",
    "onnxruntime>=1.16.0",
]
train = [
    "swanlab>=0.1.0",
]
all = [
    "versperomni[vlm,omni,train]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"versper" = ["**/*.py"]
